-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.0-rc1
-
-
d5750f8cb (13.0), 3f8bc9810 (13.0)
- Create a simple app e.g. from template
- Build and run it by using the Run as Root option on the Run settings
Current result: no pw is requested, uid of the process started is my normale uid
- is required for
-
QTCREATORBUG-30517 "Run as root user" is documented only for Linux
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-30516 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 547030,5 | Utils: Export TypedAspect | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 547128,3 | Debugger: Add "Run as root" support for lldb | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |