Utils: Export TypedAspect

Without the export, when compiled on macOS (with clang), the call
"runControl()->aspect<RunAsRootAspect>()" in runcontrol.cpp would
return a nullptr, since ProjectExplorer and libUtils had different
vtables for TypedAspect<bool>.

Task-number: QTCREATORBUG-30516
Change-Id: Ic3cef6545e97f59af2a1138f13762c07d9402e4a
Reviewed-by: hjk <hjk@qt.io>